# microb

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  go.mod  go.sum
.github/workflows/: docker.yml
cmd/microb/: main.go
example/01-minimal/: README.md  pyproject.toml
example/02-syntax-directive/: README.md  pyproject.toml
example/03-entrypoint-and-command/: README.md  example.py  pyproject.toml
example/04-requirements-file/: README.md  pyproject.toml
example/05-alpine-base-image/: README.md  pyproject.toml
example/06-extras/: pyproject.toml
example/07-advanced-alpine/: example.py
example/08-poetry/: pyproject.toml
example/09-rye/: README.md
example/alpine/: pyproject.toml  requirements.txt
example/debian/: pyproject.toml
example/minimal/: pyproject.toml
example/poetry/: pyproject.toml
example/poetry/poetry_example/: __main__.py
example/requirements/: pyproject.toml
example/rye/: pyproject.toml
example/rye/src/rye_example/: __init__.py
v1/config/: config.go  flavors.go  poetry.go  python_version.go
v1/dockerfile/: build_stage.go  run_stage.go  translate.go
v1/llb/: build.go
v1/utils/: io.go  utils.go
