#syntax=gucharbon/microb
[tool.poetry]
name = "poetry-example"
version = "0.1.0"
description = ""
authors = ["Guillaume Charbonnier <guillaume.charbonnier@araymond.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"  # IMPORTANT: caret notation is not supported for python version
nats-py = "^2.7.2"

[tool.microb.target.default]
flavor = "alpine"
requirements = "requirements.lock"
command = ["python", "-m", "poetry_example"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
