#syntax=gucharbon/microb
[project]
name = "rye-example"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Guillaume Charbonnier", email = "guillaume.charbonnier@araymond.com" }
]
dependencies = [
    "nats-py>=2.7.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rye_example"]

[tool.microb.target.default]
flavor = "alpine"
requirements = "requirements.lock"
command = ["python", "-m", "python_journey"]
